--- a/spring_ch10/src/main/resources/messages/label_ko.properties
+++ b/spring_ch10/src/main/resources/messages/label_ko.properties
@@ -24,3 +24,6 @@ login.btn = 로그인하기
 idPasswordNotMacthing = 아이디와 비밀번호가 일치하지 않습니다.
 rememberEmail = Email 기억하기
 login.done=로그인에 성공했습니다.
+
+go.members=회원조회
+typeMismatch.java.time.LocalDateTime=잘못된 형식
